[tool.poetry]
name = "dbt-cli-user"
version = "0.1.0"
description = ""
authors = ["valdAsync <valdasync@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
pydantic = "^2.7.4"
watchdog = "^4.0.1"
typer = "^0.12.3"
textual = "^0.72.0"
xdg-base-dirs = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
